--- a/webapp/assets/css/font.css
+++ b/webapp/assets/css/font.css
@@ -1,14 +1,14 @@
-TD {font-size:9pt;font-family: Verdana,±¼¸²;  letter-spacing:-1px; text-decoration: none;}
+TD {font-size:9pt;font-family: Verdana,ï¿½ï¿½ï¿½ï¿½;  letter-spacing:-1px; text-decoration: none;}
 
-.cmfont{font-size:9pt;font-family: Verdana,±¼¸²;  letter-spacing:-1px; text-decoration: none;}
-.cmfont1{font-size:9pt;font-family: Verdana,±¼¸²;  letter-spacing:-1px; text-decoration: none; border:1 solid #cdcdcd;}
-.smfont{font-size:8pt;font-family: µ¸¿ò,±¼¸²;  letter-spacing:-1px; text-decoration: none;}
-.smfont1{font-size:8pt;font-family: µ¸¿ò,±¼¸²;  letter-spacing:0px; text-decoration: none;}
-
-a:link { font-size:9pt; letter-spacing:-1px; font-family:Verdana,µ¸¿ò; color: 5D5D5D;  text-decoration: none;}
-a:visited {font-size:9pt; letter-spacing:-1px; font-family:Verdana,µ¸¿ò; color: 5D5D5D;  text-decoration: none;}
-a:hover { font-size:9pt; letter-spacing:-1px; font-family:Verdana,µ¸¿ò;color: 5D5D5D;  text-decoration: none;}
-
+.cmfont{font-size:9pt;font-family: Verdana,ï¿½ï¿½ï¿½ï¿½;  letter-spacing:-1px; text-decoration: none;}
+.cmfont1{font-size:9pt;font-family: Verdana,ï¿½ï¿½ï¿½ï¿½;  letter-spacing:-1px; text-decoration: none; border:1 solid #cdcdcd;}
+.smfont{font-size:8pt;font-family: ï¿½ï¿½ï¿½ï¿½,ï¿½ï¿½ï¿½ï¿½;  letter-spacing:-1px; text-decoration: none;}
+.smfont1{font-size:8pt;font-family: ï¿½ï¿½ï¿½ï¿½,ï¿½ï¿½ï¿½ï¿½;  letter-spacing:0px; text-decoration: none;}
+/* 
+a:link { font-size:9pt; letter-spacing:-1px; font-family:Verdana,ï¿½ï¿½ï¿½ï¿½; color: 5D5D5D;  text-decoration: none;}
+a:visited {font-size:9pt; letter-spacing:-1px; font-family:Verdana,ï¿½ï¿½ï¿½ï¿½; color: 5D5D5D;  text-decoration: none;}
+a:hover { font-size:9pt; letter-spacing:-1px; font-family:Verdana,ï¿½ï¿½ï¿½ï¿½;color: 5D5D5D;  text-decoration: none;}
+ */
 BODY	{ 
 scrollbar-face-color: #F0F0F0; 
 scrollbar-shadow-color: #ffffff; 
