--- a/webapp/assets/css/global.css
+++ b/webapp/assets/css/global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Do+Hyeon|Francois+One|Jua|Kanit|Libre+Franklin|Righteous');
 * { -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
@@ -5,6 +6,17 @@
     box-sizing: border-box; 
     padding:0;
     margin:0;
+    font-family: 'Kanit', sans-serif;
+  	 color:#333;
+}	
+
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
 }
 
 a, a:hover, a:link, a:visited{
@@ -18,6 +30,8 @@ ul, ol{
 
 img{
 	border: none;
+	padding:0;
+	margin:0;
 }
 
 /* header */
@@ -33,7 +47,7 @@ header#header{
     -webkit-transition: all 0.3s ease;
     background-color: rgba(255,255,255,0.7);
     sbackground-color: rgba(200,55,98,0.6);
-    padding: 20px;
+    padding: 20px 20px 20px 38px;
 	sborder:1px solid black;
 }
 div#wrap-header-logo, div.menu-left, div.menu-right{
@@ -46,9 +60,20 @@ div#wrap-header-logo{
 }
 
 div#wrap-header-logo h1{
-	font-family: fantasy;
-	letter-spacing: 5px;
+	font-family: 'Do Hyeon', sans-serif;
+	font-family: 'Jua', sans-serif;
+	font-family: 'Libre Franklin', sans-serif;
+	font-family: 'Francois One', sans-serif;
+	font-family: 'Kanit', sans-serif;
+	font-family: 'Righteous' !important;
+	letter-spacing: 6px;
 	text-transform: uppercase;
+	
+}
+
+div#wrap-header-logo h1 a{
+	font-family: 'Righteous' !important;
+	color:#777;
 }
 
 
@@ -63,7 +88,7 @@ div.menu-left{
     text-align: center;
     position: relative;
     float: right;
-    margin-top: -13px;
+    margin-top: 0px;
 }
 
 div.menu-left > div{
@@ -75,7 +100,7 @@ div.menu-left > div{
     position: relative;
     float: left;
     box-sizing: border-box;
-    line-height: 60px;
+    line-height: 31px;
 }
 
 div.menu-left > div > span{
@@ -108,20 +133,19 @@ div.menu-left > div > img:hover{
     right: 0;
     left: 0;
     margin: auto;
+    border-radius:0 0 7px 7px;
 }
 
 .menu-left > div > ul > li{
-    margin:2px 0 2px -10px;
+    margin:4px 0 8px 0px;
+    sborder:1px solid black;
 }
-
-
 
 
 
 /* menu right */
 div.menu-right{
 	sborder:1px solid black;
-	width: 240px;
     height: 60px;
     line-height: 60px;
     box-sizing: border-box;
@@ -164,18 +188,68 @@ div.menu-right > div > img:hover{
     min-width: 80px;
     background: rgba(255,255,255,0.7);
     text-align: center;
-    top: 60px;
+    top: 73px;
     line-height: 23px;
     position: absolute;
     right: 0;
     left: 0;
     margin: auto;
+    padding:1px 0;
+    border-radius:0 0 7px 7px;
 }
 
 .menu-right > div > ul > li{
-    margin:2px 0 2px -10px;
+	width:100%;
+    margin:12px 0px;
 }
 
+.menu-right > div > ul.search-bar{
+    right: 0;
+    left: -100px;
+    width:200px;
+}
+
+ul.search-bar {}
+ul.search-bar  li {
+	content: "";
+	display: block;
+	clear:both;
+
+}
+
+ul.search-bar  li form{
+	content: "";
+	display: block;
+	clear:both;
+	padding:1em;
+}
+
+ul.search-bar  li fieldset{
+	border-radius: 0.4em;
+	background-color: #fff;
+	border: 1px solid #aaa;
+    overflow: hidden;
+    background-color: #eee;
+}
+
+ul.search-bar  li  #keyword, ul.search-bar  li  .btn-search{
+	display:block;
+	margin:0;
+	float:left;
+}
+ul.search-bar  li  #keyword{
+	font-size:14px;
+	padding:6px 10px;
+	width:140px;
+	border:0;
+	border-right:1px solid #aaa;
+}
+
+ul.search-bar  li  .btn-search{
+	height:22px;
+	margin-top:6px;
+	margin-left:7px;
+}
 
 
 
@@ -194,26 +268,46 @@ div.header-title{
 	text-align: center;
 }
 
-.header-title h1{
-	
+.header-title h1, .product-list-header h1{
 	text-transform:uppercase;
 	letter-spacing:3px;
 	color:#C83762;
-	font-size:1.5em;
+	font-size:1.8em;
 	margin-bottom:1em;
+	text-align: center;
 }
 
+div.wrap-content{
+	max-width:-webkit-fit-content;
+	max-width:-moz-max-content;
+	display:table;  /* 익스플로러에서 컨텐츠에 맞게 영역 너비 조절 및 가운데 정렬*/
+	margin:0 auto;
+	padding-bottom:4em;
+}
 
+wrap-index-item a{
+	display:block;
+}
+
+div#wrap-index-item img{
+	display:block;
+	width:100%;
+}
 
 
 
 /* footer */
 footer#footer{
+	margin-top:30px;
+	padding-top:50px;
 	width:100%;
 }
 
 div#wrap-footer-item{
-	width:1300px;
+	width:fit-content;
+	width: -moz-fit-content;
+	display:flex;
+	flex-direction:row;
 	margin: auto;
 }
 div#wrap-footer-item:after{
@@ -221,8 +315,19 @@ div#wrap-footer-item:after{
 	display: block;
 	clear:both;
 }
+div#wrap-footer-item > div{
+	sdisplay:table;
+	margin:auto;
+}
+div#wrap-footer-item > div > div{
+	display:flex;
+	flex-direction:row;
+	margin:auto;
+}
+
 div#wrap-footer-item ul, div#wrap-footer-item ul{
-	float:left;
+	sfloat:left;
+	sdisplay:inline-block;
 }
 
 div#wrap-footer-item ul{
@@ -239,4 +344,66 @@ div#wrap-footer-item ul{
 div#wrap-footer-item ul.company {
     width: 360px;
     border-right: 0;
+}
+
+
+footer#footer  p.copyright {
+	clear:both;
+	padding:1em 2em;
+	text-align: right;
+}
+
+
+/* Pagination */
+div.wrap-pagination{
+    margin:auto;
+    padding-top:1em;
+	clear:both;
+	text-align:center;
+	font-size: 0;
+}
+ol.pagination{
+	display: inline-block;
+    line-height: 0;
+    vertical-align: top;
+}
+ol.pagination li{
+	font-size:12px;
+	display:inline-block;
+	border: 1px solid #d7d5d5;
+	margin: 0 0 0 -1px;
+	color: #757575;
+    vertical-align: top;
+}
+
+ol.pagination li:first-child {
+    margin-left: 0;
+}
+
+ol.pagination li a{
+	display: block;
+	color: #495164;
+    width: 33px;
+    padding: 9px 0;
+    font-weight: bold;
+    orcolor: #939393;
+    line-height: 14px;
+    background: #fff;
+}
+
+ol.pagination li a.this{
+	padding-bottom: 6px;
+    border-bottom: 3px solid #495164;
+    color: #495164;
+}
+
+
+ol.pagination li a.deactive{
+	color: #939393;
+}
+ol.pagination li img{
+	border: none;
+	margin:0;
+	padding:0;
+	vertical-align: top;
 }
